--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,3 +4,30 @@ theme:
     name: readthedocs
     locale: en
     navigation_depth: 1
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.details
+  - attr_list
+  - meta
+  - md_in_html
+  - admonition
+
+plugins:
+   - glightbox:
+       touchNavigation: false
+       loop: false
+       effect: zoom
+       slide_effect: none
+       width: auto
+       height: auto
+       zoomable: true
+       draggable: true
+       skip_classes:
+         - custom-skip-class-name
+       auto_caption: false
+       caption_position: bottom
